fix header menu style (z-index)

--- a/client/src/components/GameCard/GameCard.module.css
+++ b/client/src/components/GameCard/GameCard.module.css
@@ -51,7 +51,7 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1000;
+    z-index: 2;
 }
 
 .add__to__basket__bg {
