--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -38,6 +38,7 @@
     justify-content: space-between;
     align-items: center;
     font-size: 18px;
+    z-index: 1000;
 }
 
 .menu__item {
